Keeping Docker configuration files for images as well

--- a/k8s-configurations/00-ingress-rules.yaml
+++ b/k8s-configurations/00-ingress-rules.yaml
@@ -10,10 +10,10 @@ metadata:
 spec:
   tls:
   - hosts:
-    - HOSTNAME # (for example, gc2.eastus.cloudapp.azure.com)
+    - gc2.eastus.cloudapp.azure.com
     secretName: tls-secret
   rules:
-  - host: HOSTNAME # (for example, gc2.eastus.cloudapp.azure.com)
+  - host: gc2.eastus.cloudapp.azure.com
     http:
       paths:
       - backend:
