Providing the GC2_HOST to vidi image using the ConfigMap

--- a/k8s-configurations/vidi-deployment.yaml
+++ b/k8s-configurations/vidi-deployment.yaml
@@ -19,7 +19,13 @@ spec:
         io.kompose.service: vidi
     spec:
       containers:
-      - image: mapcentia/vidi
+      - env:
+        - name: GC2_HOST
+          valueFrom:
+            configMapKeyRef:
+              key: GC2_HOST
+              name: vidi-env
+        image: mapcentia/vidi
         name: vidi
         resources: {}
         volumeMounts:
