Setting the Vidi URL for GC2 installation

--- a/k8s-configurations/conf-gc2core-env-configmap.yaml
+++ b/k8s-configurations/conf-gc2core-env-configmap.yaml
@@ -6,6 +6,7 @@ data:
   GC2_PORT: "5433"
   GC2_PASSWORD: "12345"
   GC2_BOUNCER: "true"
+  VIDI_URL: "https://vidi.eastus.cloudapp.azure.com/app/"
 kind: ConfigMap
 metadata:
   creationTimestamp: null
