--- a/k8s-configurations/conf-vidi-env-configmap.yaml
+++ b/k8s-configurations/conf-vidi-env-configmap.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 data:
   GC2_HOST: "https://gc2.eastus.cloudapp.azure.com"
+  GOOGLE_MAPS_API_KEY: "abc123"
 kind: ConfigMap
 metadata:
   creationTimestamp: null
