--- a/k8s-configurations/vidi-deployment.yaml
+++ b/k8s-configurations/vidi-deployment.yaml
@@ -25,6 +25,11 @@ spec:
             configMapKeyRef:
               key: GC2_HOST
               name: vidi-env
+        - name: GOOGLE_MAPS_API_KEY
+          valueFrom:
+            configMapKeyRef:
+              key: GOOGLE_MAPS_API_KEY
+              name: vidi-env
         image: alexshumilov/vidi
         name: vidi
         resources: {}
