--- a/k8s-configurations/conf-gc2core-env-configmap.yaml
+++ b/k8s-configurations/conf-gc2core-env-configmap.yaml
@@ -7,6 +7,7 @@ data:
   GC2_PASSWORD: "12345"
   GC2_BOUNCER: "true"
   VIDI_URL: "https://somehost.eastus.cloudapp.azure.com" # No slash at the end of the host name
+  GOOGLE_API_KEY: "abc123"
 kind: ConfigMap
 metadata:
   creationTimestamp: null
